# OptimizationTheoryReport

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy.yml
solver/: CMakeLists.txt  README.md
solver/algorithm/RandomRouteSolver/: CMakeLists.txt  README.md  RandomRouteSolver.cpp  RandomRouteSolver.hpp
solver/algorithm/SimulatedAnnealingSolver/: CMakeLists.txt  README.md  SimulatedAnnealingSolver.cpp  SimulatedAnnealingSolver.hpp
solver/algorithm/SimulatedAnnealingSolver2/: CMakeLists.txt  README.md  SimulatedAnnealingSolver2.cpp  SimulatedAnnealingSolver2.hpp
solver/algorithm/SimulatedAnnealingSolver3/: CMakeLists.txt  README.md  SimulatedAnnealingSolver3.cpp  SimulatedAnnealingSolver3.hpp
solver/algorithm/SimulatedAnnealingSolver4/: CMakeLists.txt  README.md  SimulatedAnnealingSolver4.cpp  SimulatedAnnealingSolver4.hpp
solver/algorithm/SimulatedAnnealingSolver5/: CMakeLists.txt  README.md  SimulatedAnnealingSolver5.cpp  SimulatedAnnealingSolver5.hpp
solver/algorithm/SimulatedAnnealingSolver6/: CMakeLists.txt  README.md  SimulatedAnnealingSolver6.cpp  SimulatedAnnealingSolver6.hpp
solver/algorithm/SimulatedAnnealingSolver7/: CMakeLists.txt  README.md  SimulatedAnnealingSolver7.cpp  SimulatedAnnealingSolver7.hpp
solver/algorithm/SimulatedAnnealingSolver8/: CMakeLists.txt  README.md  SimulatedAnnealingSolver8.cpp  SimulatedAnnealingSolver8.hpp
solver/algorithm/solver_example/: CMakeLists.txt  solver_example.cpp  solver_example.hpp
solver/include/: BIT.hpp  CumulativeSumMaxSegmentTree.hpp  SA_base.hpp  StarrySkyTree.hpp  common.hpp  problem.hpp  random_generator.hpp  solution.hpp  solver_base.hpp  timer.hpp  validator.hpp
solver/src/: BIT.cpp  CumulativeSumMaxSegmentTree.cpp  SA_base.cpp  StarrySkyTree.cpp  common.cpp  main.cpp  problem.cpp  random_generator.cpp  solution.cpp  timer.cpp  validator.cpp
testcase/: 0000.txt  0001.txt  0002.txt  0003.txt  0004.txt  0005.txt  0006.txt  0007.txt  0008.txt  0009.txt  README.md  coordinates_case_1.txt  coordinates_case_2.txt  coordinates_case_3.txt  generator.py  input_case_1.txt  input_case_2.txt  input_case_3.txt
visualizer/: .env  .eslintrc.json  .prettierrc.json  package.json  tsconfig.app.json  vite.config.ts
visualizer/public/md/: howto.md
visualizer/src/OptimizationTheoryReport/: App.css  App.tsx  index.css
visualizer/src/OptimizationTheoryReport/components/BaseVisualizer/: BaseVisualizer.module.css  BaseVisualizer.tsx
visualizer/src/OptimizationTheoryReport/components/Container/: Container.module.css  Container.tsx
visualizer/src/OptimizationTheoryReport/components/Layout/: Layout.module.css  Layout.tsx
visualizer/src/OptimizationTheoryReport/components/MarkdownContent/: MarkdownContent.tsx  (+1 more)
(+30 files in other folders)
